feat: revamp skills structure and update profile information

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">23</span>
+                            <span class="about__info-title">26</span>
                             <spen class="about__info-name">อายุ <br> Age</spen>
                         </div>
 
                         <div>
-                            <span class="about__info-title">3.74</span>
+                            <span class="about__info-title">3.75</span>
                             <spen class="about__info-name">เกรดเฉลี่ย <br> GPA</spen>
                         </div>
 
                         <div>
-                            <span class="about__info-title">4y+</span>
+                            <span class="about__info-title">5y+</span>
                             <spen class="about__info-name">ประสบการณ์ทำงาน <br> work experience</spen>
                         </div>
                     </div>
@@ -184,116 +184,162 @@
             <span class="section__subtitle">My technical level</span>
 
             <div class="skills__container container grid">
-                <!--==================== Skills 1 ====================-->
+                <!--==================== Skills 1: Languages ====================-->
                 <div>
                     <div class="skills__content skills__open">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
-
                             <div>
-                                <h1 class="skills__title">Frequently Used Coding Languages</h1>
+                                <h1 class="skills__title">Frequently Used Languages</h1>
                                 <span class="skills__subtitle">ประสบการณ์ภาษาที่เคยใช้เขียนโปรแกรม</span>
                             </div>
-
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
 
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__title">
+                                    <h3 class="skills__name">Go</h3>
+                                    <span class="skills__namber">70%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__go"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">C# (.NET)</h3>
+                                    <span class="skills__namber">65%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__csharp"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">JavaScript / TypeScript</h3>
+                                    <span class="skills__namber">60%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__tsjs"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
                                     <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__namber">40%</span>
+                                    <span class="skills__namber">60%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__html"></span>
-                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__html"></span></div>
                             </div>
 
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__namber">30%</span>
+                                    <span class="skills__namber">55%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__css"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__title">
-                                    <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__namber">10%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__js"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__title">
-                                    <h3 class="skills__name">PHP</h3>
-                                    <span class="skills__namber">15%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__php"></span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <div class="skills__title">
-                                    <h3 class="skills__name">Dart (อยู่ระหว่างศึกษา)</h3>
-                                    <span class="skills__namber">5%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__dart"></span>
-                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__css"></span></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--==================== Skills 2 ====================-->
+
+                <!--==================== Skills 2: Frameworks ====================-->
                 <div>
                     <div class="skills__content skills__close">
                         <div class="skills__header">
-                            <i class="uil uil-wrench skills__icon"></i>
-
+                            <i class="uil uil-layer-group skills__icon"></i>
                             <div>
-                                <h1 class="skills__title">Frequently Used Tools</h1>
-                                <span class="skills__subtitle">ประสบการณ์เครื่องมือที่เคยใช้</span>
+                                <h1 class="skills__title">Frameworks & Libraries</h1>
+                                <span class="skills__subtitle">เฟรมเวิร์กที่ถนัดและใช้งานบ่อย</span>
                             </div>
-
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
 
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__title">
-                                    <h3 class="skills__name">VScode</h3>
+                                    <h3 class="skills__name">Angular</h3>
+                                    <span class="skills__namber">65%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__angular"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">Vue.js</h3>
+                                    <span class="skills__namber">55%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__vue"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">.NET Core / ASP.NET</h3>
+                                    <span class="skills__namber">60%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__dotnet"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">Bootstrap</h3>
+                                    <span class="skills__namber">50%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__bootstrap"></span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">Flask</h3>
+                                    <span class="skills__namber">40%</span>
+                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__flask"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--==================== Skills 3: DevOps & Tools ====================-->
+                <div>
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="uil uil-wrench skills__icon"></i>
+                            <div>
+                                <h1 class="skills__title">DevOps & Tools</h1>
+                                <span class="skills__subtitle">เครื่องมือและแพลตฟอร์มที่ใช้งาน</span>
+                            </div>
+                            <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">Kubernetes</h3>
                                     <span class="skills__namber">70%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__vscode"></span>
-                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__k8s"></span></div>
                             </div>
 
                             <div class="skills__data">
                                 <div class="skills__title">
-                                    <h3 class="skills__name">Photoshop</h3>
-                                    <span class="skills__namber">25%</span>
+                                    <h3 class="skills__name">Kafka</h3>
+                                    <span class="skills__namber">60%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__photoshop"></span>
-                                </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__kafka"></span></div>
                             </div>
 
                             <div class="skills__data">
                                 <div class="skills__title">
-                                    <h3 class="skills__name">Flutter (อยู่ระหว่างการศึกษา)</h3>
-                                    <span class="skills__namber">5%</span>
+                                    <h3 class="skills__name">Argo (CD / Workflows)</h3>
+                                    <span class="skills__namber">55%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__flutter"></span>
+                                <div class="skills__bar"><span class="skills__percentage skills__argo"></span></div>
+                            </div>
+
+                            <div class="skills__data">
+                                <div class="skills__title">
+                                    <h3 class="skills__name">VS Code</h3>
+                                    <span class="skills__namber">80%</span>
                                 </div>
+                                <div class="skills__bar"><span class="skills__percentage skills__vscode"></span></div>
                             </div>
                         </div>
                     </div>
@@ -308,12 +354,12 @@
 
             <div class="background__container container">
                 <div class="background__tabs">
-                    <div class="background__button button--flex background__active" data-target='#education'>
+                    <div class="background__button button--flex" data-target='#education'>
                         <i class="uil uil-graduation-cap background__icon"></i>
                         Education
                     </div>
 
-                    <div class="background__button button--flex" data-target='#work'>
+                    <div class="background__button button--flex background__active" data-target='#work'>
                         <i class="uil uil-briefcase-alt background__icon"></i>
                         Work
                     </div>
@@ -321,7 +367,7 @@
 
                 <div class="background__sections">
                     <!--==================== Background conten1 ====================-->
-                    <div class="background__content background__active" data-content id="education">
+                    <div class="background__content" data-content id="education">
                         <!--==================== Background 1 ====================-->
                         <div class="background__data">
                             <div>
@@ -397,7 +443,7 @@
                     </div>
 
                     <!--==================== Background  conten2 ====================-->
-                    <div class="background__content" data-content id="work">
+                    <div class="background__content background__active" data-content id="work">
                         <!--==================== Background 1 ====================-->
                         <div class="background__data">
                             <div>
@@ -497,6 +543,7 @@
 
                             <div>
                                 <span class="background__rounder"></span>
+                                <span class="background__line"></span>
                             </div>
 
                             <div>
@@ -504,10 +551,25 @@
                                 <span class="background__subtitle">Full Stack Developer</span>
                                 <div class="background__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2023 - present
+                                    2023 - 2025
                                 </div>
                             </div>
 
+                        </div>
+
+                        <div class="background__data">
+                            <div>
+                                <h3 class="background__title">บริษัท ไทยเบฟเวอเรจ จำกัด (ThaiBev)</h3>
+                                <span class="background__subtitle">DevOps</span>
+                                <div class="background__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2025 - present
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="background__rounder"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -568,7 +630,7 @@
                     </div>
 
                     <!--==================== Portfolio 4 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <div class="portfolio__content" style="display: none;">
                         <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
@@ -618,7 +680,7 @@
                     </div>
 
                     <!--==================== Portfolio 7 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
+                    <div class="portfolio__content" style="display: none;">
                         <img src="img/portfolio1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
