feat: add new portfolio projects with images and descriptions

--- a/index.html
+++ b/index.html
@@ -586,7 +586,79 @@
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
 
-                    <!--==================== Portfolio 1 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/thaibev-le.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Thaibev OTC LE (Logistics Execution)</h3>
+                            <p class="portfolio__description"> ระบบจัดการใบขนและเอกสารการขาย
+                                เชื่อมต่อกับระบบภายในเพื่ออัปเดตสถานะอัตโนมัติ
+                                ช่วยให้ฝ่ายขายและฝ่ายบัญชีทำงานได้รวดเร็วและแม่นยำมากขึ้น
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/thaibev-reporting.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">ThaiBev Reporting</h3>
+                            <p class="portfolio__description">
+                                ระบบรายงานสรุปการขาย การขน ที่ผู้ใช้งานสามารถเลือกสาขาและช่วงเวลา
+                                พร้อมดาวน์โหลดรายงานเพื่อใช้ในการวิเคราะห์และวางแผนการตลาดได้อย่างมีประสิทธิภาพ
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/argocd.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Argo CD - GitOps Deployment</h3>
+                            <p class="portfolio__description">ออกแบบระบบ GitOps ด้วย Argo CD เพื่อบริหารจัดการการ deploy
+                                บน Kubernetes
+                                ทำให้การปล่อยเวอร์ชันมีมาตรฐาน อัตโนมัติ และสามารถ rollback ได้อย่างรวดเร็ว</p>
+                        </div>
+                    </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/pipeline.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">GitLab CI/CD - Automation Pipeline</h3>
+                            <p class="portfolio__description"> ตั้งค่า Pipeline อัตโนมัติสำหรับ Build, Test และ Deploy
+                                บน GitLab
+                                ลดเวลาการ release จากหลายสิบเป็นไม่กี่นาที เพิ่ม reliability ของระบบ
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/kubernetes.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Kubernetes - Container Orchestration</h3>
+                            <p class="portfolio__description">ออกแบบและปรับแต่ง cluster Kubernetes ให้รองรับ
+                                microservices
+                                พร้อม HPA (Horizontal Pod Autoscaler) เพื่อ scale ตามโหลดจริง
+                                เพิ่ม uptime และความเสถียรของระบบ
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/kafka.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Kafka - Event Streaming Platform</h3>
+                            <p class="portfolio__description"> ออกแบบระบบ event streaming ด้วย Apache Kafka
+                                ใช้สำหรับ real-time data pipeline และ service integration
+                                ทำให้ข้อมูลระหว่างระบบไหลได้ทันทีและรองรับผู้ใช้จำนวนมาก
+                            </p>
+                        </div>
+                    </div>
+
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio7.png" alt="" class="portfolio__img">
 
@@ -602,7 +674,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio6.png" alt="" class="portfolio__img">
 
@@ -618,7 +689,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio5.png" alt="" class="portfolio__img">
 
@@ -629,7 +699,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 4 ====================-->
                     <div class="portfolio__content" style="display: none;">
                         <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
 
@@ -645,7 +714,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio3.jpg" alt="" class="portfolio__img">
 
@@ -662,7 +730,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio2.jpg" alt="" class="portfolio__img">
 
@@ -679,7 +746,6 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 7 ====================-->
                     <div class="portfolio__content" style="display: none;">
                         <img src="img/portfolio1.jpg" alt="" class="portfolio__img">
 
