feat: Add new work experience for Ngern Tid Lor and adjust end date for ThaiBev.

--- a/index.html
+++ b/index.html
@@ -563,20 +563,37 @@
                                 <span class="background__subtitle">DevOps</span>
                                 <div class="background__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2025 - present
+                                    2025
                                 </div>
                             </div>
 
                             <div>
                                 <span class="background__rounder"></span>
+                                <span class="background__line"></span>
+                            </div>
+                        </div>
+
+                        <!--==================== Background 7 ====================-->
+                        <div class="background__data">
+                            <div></div>
+
+                            <div>
+                                <span class="background__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="background__title">เงินติดล้อ (Ngern Tid Lor)</h3>
+                                <span class="background__subtitle">Full Stack Developer</span>
+                                <div class="background__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2025 - present
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
 
         <!--==================== Portfolio ====================-->
         <section class="portfolio section" id="portfolio">
